# duSraBheja

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  linkedin-post-draft.md  media-history-dump.md  package-lock.json  package.json  providers.example.yaml  pyproject.toml  skills-lock.json
alembic/: env.py
config/: .env.example
docs/: PRODUCT_IMPROVEMENT_CAMPAIGN.md  agent-brain-workflow.md  brain-mesh-command-center-framework.md  master-architecture-spec.md  mcp-integration.md  providers.md  public-site.md  security-privacy.md  self-hosting.md  solo-ai-command-center-prd.md  source-of-truth-prompt-notes.md
infra/: docker-compose.yml
myInput/: Ahmad_Personal_Bible.md  finalProductPlanwithDiscord.txt  myResponseForQuestions.txt  transcriptPlusChatGptSummary.txt
public-seed/: Ahmad_Profile_Signal.md  Job_Hunt_Summary_Mar2026.md  Project_Descriptions_Improved.md  Website_Photo_Guide.md  about.md  brain_data_dump_mar16.md  interests.json  photo_map.json  repo_history_barbershop.md  repo_history_duSraBheja.md  repo_history_other_projects.md
scripts/: 001_init_schema.sql  002_phase3_schema.sql  backfill_conversation_sessions.py  backfill_inbox_images.py  backfill_local_display_metadata.py  bootstrap_collector_batches.sh  bootstrap_local_env.sh  brain_agent_prompt.py  brain_session.py  deploy_brain.sh  enable_brain_https.sh  health-check.sh  open_collector_tunnel.sh  profile_inventory_report.py  prune_low_signal_records.py  publish_morning_cycle.py  refresh_public_surface.py  send-test.ts  (+16 more)
(+217 files in other folders)
